# ColorPy

./: .gitignore  MANIFEST  blackbody.py  ciexyz.py  colormodels.py  figures.py  illuminants.py  misc.py  plots.py  pyproject.toml  rayleigh.py  setup.cfg  setup.py  test.py  test_blackbody.py  test_ciexyz.py  test_colormodels.py  test_illuminants.py  test_rayleigh.py  test_thinfilm.py  thinfilm.py
colorpy/: ciexyz.py  colormodels.py  illuminants.py
tests/: __main__.py  test_blackbody.py  test_ciexyz.py  test_colormodels.py  test_illuminants.py  test_rayleigh.py  test_thinfilm.py
