[metadata]
name = colorpy
version = 0.1.1
author = Mark Kness
author_email = mkness@alumni.utexas.net
license = LGPL-3.0-or-later
description = Color calculations with physical descriptions of light spectra
url = http://markkness.net/colorpy/
long_description = ColorPy is a Python package to convert physical descriptions of light spectra of light intensity vs. wavelength - into RGB colors that can be drawn on a computer screen. It provides a nice set of attractive plots that you can make of such spectra, and some other color related functions as well.

project_urls = 
    Source Code = https://github.com/fish2000/colorpy
    Issue Tracker = https://github.com/fish2000/colorpy/issues

[options]
package_dir =
    colorpy = .
packages = colorpy

[options.package_data]
colorpy =
    README.rst
    COPYING.txt
    COPYING.LESSER.txt
    license.txt
    ColorPy.html
